--- a/Hotel_Management_System/Hotel_Management_System/Properties/Resources.resx
+++ b/Hotel_Management_System/Hotel_Management_System/Properties/Resources.resx
@@ -130,11 +130,20 @@
   <data name="gradient_img (2)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gradient_img (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="managerooms" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\managerooms.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="gradient" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gradient.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="managerooms" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\managerooms.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Lawrencium" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Lawrencium.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="gradient-blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gradient-blue.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Pinot Noir" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Pinot Noir.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="background4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\background4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -142,7 +151,7 @@
   <data name="gradient_img (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gradient_img (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Lawrencium" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Lawrencium.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Titanium" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Titanium.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
